--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:name=".login.views.SignInActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
+            android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
@@ -29,16 +30,17 @@
         <activity android:name=".splashscreen.SplashScreenActivity"
             android:parentActivityName=".login.views.SignInActivity"
             android:launchMode="singleTop"
+            android:noHistory="true"
             android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity android:name=".home.views.HomeActivity"
             android:launchMode="singleTop"
             android:parentActivityName=".splashscreen.SplashScreenActivity"
             android:windowSoftInputMode="stateAlwaysHidden"/>
-        <activity android:name=".detailscreen.DetailScreenActivity"
-            android:parentActivityName=".home.views.HomeActivity"
-            android:launchMode="singleTop"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:theme="@style/AppTheme.Dialog" />
+<!--        <activity android:name=".detailscreen.DetailScreenActivity"-->
+<!--            android:parentActivityName=".home.views.HomeActivity"-->
+<!--            android:launchMode="singleTop"-->
+<!--            android:windowSoftInputMode="stateAlwaysHidden"-->
+<!--            android:theme="@style/AppTheme.Dialog" />-->
     </application>
 
 </manifest>
