--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ apply plugin: 'kotlin-kapt'
     ext.kodein_version = '5.3.0'
     ext.time_version = '1.5.0'
     ext.lifecycle_version = '2.2.0'
+    ext.coreTestingVersion = '2.1.0'
 
 android {
     compileSdkVersion 30
@@ -55,6 +56,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "androidx.arch.core:core-testing:$coreTestingVersion"
 
     //support different sizes
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
